--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
+<app-navbar></app-navbar>
 <app-spaceflight-news-show></app-spaceflight-news-show>
+<app-footer></app-footer>
+<router-outlet></router-outlet>
