--- a/src/app/spaceflight/spaceflight-news-show/spaceflight-news-show.component.html
+++ b/src/app/spaceflight/spaceflight-news-show/spaceflight-news-show.component.html
@@ -1,3 +1,30 @@
-<div *ngFor="let article of articles">
-  <h2>{{ article.title }}</h2>
+<div class="container">
+  <div
+    class="
+      row
+      text-center
+      d-flex
+      align-items-center
+      justify-content-center
+      ml-5
+    "
+  >
+    <div class="col-md-4">
+      <div
+        class="card text-center"
+        style="width: 18rem"
+        *ngFor="let article of articles"
+      >
+        <img src="{{ article.imageUrl }}" class="card-img-top" alt="..." />
+        <div class="card-body">
+          <span>{{ article.newsSite }}</span>
+          <h5 class="card-title">{{ article.title }}</h5>
+          <p class="card-text">
+            {{ article.summary }}
+          </p>
+          <a href="{{ article.url }}" class="btn btn-primary">Read More</a>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
